feat: Populate dashboard with sample data

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -147,10 +147,13 @@
                                         </svg>
                                         <svg class="fill-icon">
                                             <use href="~/assets/svg/icon-sprite.svg#fill-widget"></use>
-                                        </svg><span class="lan-6">Competition</span>
+                                        </svg><span>Competitions & Events</span>
                                     </a>
                                     <ul class="sidebar-submenu">
-                                        <li><a href="general-widget.html">Events</a></li>
+                                        <li><a href="/competitions">Competitions</a></li>
+                                    </ul>
+                                    <ul class="sidebar-submenu">
+                                        <li><a href="/events">Events</a></li>
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
@@ -160,10 +163,29 @@
                                         </svg>
                                         <svg class="fill-icon">
                                             <use href="~/assets/svg/icon-sprite.svg#fill-layout"></use>
-                                        </svg><span class="lan-7">Teams</span>
+                                        </svg><span>Teams & Fighters</span>
                                     </a>
                                     <ul class="sidebar-submenu">
-                                        <li><a href="box-layout.html">Participants</a></li>
+                                        <li><a href="teams">Teams</a></li>
+                                    </ul>
+                                    <ul class="sidebar-submenu">
+                                        <li><a href="teams">Fighters</a></li>
+                                    </ul>
+                                </li>
+                                <li class="sidebar-list">
+                                    <i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="javascript:void(0)">
+                                        <svg class="stroke-icon">
+                                            <use href="~/assets/svg/icon-sprite.svg#stroke-layout"></use>
+                                        </svg>
+                                        <svg class="fill-icon">
+                                            <use href="~/assets/svg/icon-sprite.svg#fill-layout"></use>
+                                        </svg><span>Results</span>
+                                    </a>
+                                    <ul class="sidebar-submenu">
+                                        <li><a href="results">Results</a></li>
+                                    </ul>
+                                    <ul class="sidebar-submenu">
+                                        <li><a href="results">AI Results</a></li>
                                     </ul>
                                 </li>
                             </ul>
