feat: Seed participants

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -76,7 +76,7 @@
                 <div class="card">
                     <div class="card-header card-no-border pb-0">
                         <div class="header-top">
-                            <h4>Last 10 Winners</h4>
+                            <h4>Teams</h4>
                         </div>
                     </div>
                     <div class="table-responsive theme-scrollbar">
@@ -108,7 +108,7 @@
                 <div class="card">
                     <div class="card-header card-no-border pb-0">
                         <div class="header-top">
-                            <h4>Last 10 Winners</h4>
+                            <h4>Fighters</h4>
                         </div>
                     </div>
                     <div class="table-responsive theme-scrollbar">
