--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -151,8 +151,6 @@
                                     </a>
                                     <ul class="sidebar-submenu">
                                         <li><a href="/competitions">Competitions</a></li>
-                                    </ul>
-                                    <ul class="sidebar-submenu">
                                         <li><a href="/events">Events</a></li>
                                     </ul>
                                 </li>
@@ -166,10 +164,8 @@
                                         </svg><span>Teams & Fighters</span>
                                     </a>
                                     <ul class="sidebar-submenu">
-                                        <li><a href="teams">Teams</a></li>
-                                    </ul>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href="teams">Fighters</a></li>
+                                        <li><a href="/teams">Teams</a></li>
+                                        <li><a href="/fighters">Fighters</a></li>
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
@@ -182,10 +178,8 @@
                                         </svg><span>Results</span>
                                     </a>
                                     <ul class="sidebar-submenu">
-                                        <li><a href="results">Results</a></li>
-                                    </ul>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href="results">AI Results</a></li>
+                                        <li><a href="/results">Results</a></li>
+                                        <li><a href="/results-ai">AI Results</a></li>
                                     </ul>
                                 </li>
                             </ul>
